[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-keenable"
version = "0.1.2"
description = "An integration package connecting Keenable web search and LangChain"
authors = [{ name = "Keenable", email = "hello@keenable.ai" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=0.3,<2.0",
    "requests>=2.32,<3.0",
]

[project.urls]
Homepage = "https://keenable.ai"
Documentation = "https://docs.keenable.ai"
Repository = "https://github.com/keenableai/langchain-keenable"
"Source Code" = "https://github.com/keenableai/langchain-keenable"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-socket>=0.7.0",
    "requests-mock>=1.12.0",
    "langchain-tests>=0.3,<2.0",
]
lint = ["ruff>=0.6.0"]
typing = ["mypy>=1.10.0", "types-requests>=2.32.0"]

[tool.hatch.build.targets.wheel]
packages = ["langchain_keenable"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
disallow_untyped_defs = true
